crates/pocketpy-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct py_TValue {
    _unused: [u8; 0],
}
#[doc = " A 64-bit integer type. Corresponds to `int` in python."]
pub type py_i64 = i64;
#[doc = " A generic reference to a python object."]
pub type py_Ref = *mut py_TValue;
#[doc = " A global reference which has the same lifespan as the VM."]
pub type py_GlobalRef = *mut py_TValue;
#[doc = " A specific location in the value stack of the VM."]
pub type py_StackRef = *mut py_TValue;
#[doc = " An output reference for returning a value. Only use this for function arguments."]
pub type py_OutRef = *mut py_TValue;
#[doc = " Native function signature.\n @param argc number of arguments.\n @param argv array of arguments. Use `py_arg(i)` macro to get the i-th argument.\n @return `true` if the function is successful or `false` if an exception is raised."]
pub type py_CFunction = ::core::option::Option<
    unsafe extern "C" fn(argc: ::core::ffi::c_int, argv: py_StackRef) -> bool,
>;
pub const py_CompileMode_EXEC_MODE: py_CompileMode = 0;
pub const py_CompileMode_EVAL_MODE: py_CompileMode = 1;
pub const py_CompileMode_SINGLE_MODE: py_CompileMode = 2;
pub const py_CompileMode_RELOAD_MODE: py_CompileMode = 3;
#[doc = " Python compiler modes.\n + `EXEC_MODE`: for statements.\n + `EVAL_MODE`: for expressions.\n + `SINGLE_MODE`: for REPL or jupyter notebook execution.\n + `RELOAD_MODE`: for reloading a module without allocating new types if possible."]
pub type py_CompileMode = ::core::ffi::c_uint;
unsafe extern "C" {
    #[doc = " Initialize pocketpy and the default VM."]
    pub fn py_initialize();
}
unsafe extern "C" {
    #[doc = " Finalize pocketpy and free all VMs. This opearation is irreversible.\n After this call, you cannot use any function from this header anymore."]
    pub fn py_finalize();
}
unsafe extern "C" {
    #[doc = " Set `sys.argv`. Used for storing command-line arguments."]
    pub fn py_sys_setargv(argc: ::core::ffi::c_int, argv: *mut *mut ::core::ffi::c_char);
}
unsafe extern "C" {
    #[doc = " Run a source string.\n @param source source string.\n @param filename filename (for error messages).\n @param mode compile mode. Use `EXEC_MODE` for statements `EVAL_MODE` for expressions.\n @param module target module. Use NULL for the main module.\n @return `true` if the execution is successful or `false` if an exception is raised."]
    pub fn py_exec(
        source: *const ::core::ffi::c_char,
        filename: *const ::core::ffi::c_char,
        mode: py_CompileMode,
        module: py_Ref,
    ) -> bool;
}
unsafe extern "C" {
    #[doc = " Create an `int` object."]
    pub fn py_newint(arg1: py_OutRef, arg2: py_i64);
}
unsafe extern "C" {
    #[doc = " Bind a function to the object via \"argc-based\" style.\n @param obj the target object.\n @param name name of the function.\n @param f function to bind."]
    pub fn py_bindfunc(obj: py_Ref, name: *const ::core::ffi::c_char, f: py_CFunction);
}
unsafe extern "C" {
    #[doc = " Get the last return value.\n Please note that `py_retval()` cannot be used as input argument."]
    pub fn py_retval() -> py_GlobalRef;
}
unsafe extern "C" {
    #[doc = " Create a new module."]
    pub fn py_newmodule(path: *const ::core::ffi::c_char) -> py_GlobalRef;
}
unsafe extern "C" {
    #[doc = " Print the unhandled exception."]
    pub fn py_printexc();
}
